# sergio-ar-api

./: .gitignore  Cargo.toml  package-lock.json  package.json
migrations/: 0001_Consolidated_Records.down.sql  0001_Consolidated_Records.up.sql
src/: config.rs  main.rs  router.rs
src/routes/: mod.rs
src/routes/consolidator/: mod.rs  upload_and_process.rs
src/routes/data/: mod.rs  schedules.rs  shift_groups.rs
src/routes/efficiency/: generate_consolidated_report.rs  generate_efficiency_report.rs  mod.rs
src/utils/: invoicing_parser.rs  mod.rs
temp/2023-11-01/: dialogue-1.xlsx  dialogue-2.xlsx
temp/2023-11-02/: dialogue-1.xlsx  dialogue-2.xlsx  invoicing-report.csv
temp/2023-12-16/: dialogue-1.xlsx
