[package]
name = "sergio-ar-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart", "json"] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
calamine = { version = "0.25.0", features = ["chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
cron = "0.12.1"
csv = "1.3.0"
dotenv = "0.15.0"
libmath = "0.2.1"
md5 = "0.7.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
    "macros",
    "json",
    "uuid"
] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
tokio-util = { version = "0.7.11", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = [
    "add-extension",
    "trace",
    "cors"
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }